--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "date-fns": "^2.20.1",
     "formik": "^2.2.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
